--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Google keep</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
 	<header>
-		<a href="#">
-			<img src="images/menu.png" alt="menu">
+		<a id="header-menu" class="header-menu" href="#">
+			<i class="material-icons">menu</i>
 		</a>
 		<h1 class="title">
 			<span>Google</span>Keep</h1>
