feat: show / hide aside on callback (without animation)

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<img src="images/user.png" alt="perfil">
 		</a>
 	</header>
-	<nav class="navigation">
+	<nav id="navigation" class="navigation">
 		<a href="#" class="navigation-items">
 			<img src="images/bulb.png" alt="">
 			<p>Notas</p>
@@ -73,7 +73,7 @@
 			<p>Combinaciones de teclas</p>
 		</a>
 	</nav>
-	<section class="content">
+	<section id="content" class="content">
 		<input type="text" name="" class="searcher-content" placeholder="Tomar una nota...">
 		<div class="content-notes">
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
