feat: change default layout schema and logic, three columns attemp, testing with the animation (in progress)

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<script src="js/main.js"></script>
 </head>
 
-<body>
-	<header>
+<body id="main-grid">
+	<header id="main-header">
 		<a id="header-menu" class="header-menu" href="#">
 			<i class="material-icons">menu</i>
 		</a>
