fix: add sub-grid container (and all the logic involved) which contains aside and content, to prevent unexpected animations (on header for example)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body id="main-grid">
-	<header id="main-header">
+	<header>
 		<a id="header-menu" class="header-menu" href="#">
 			<i class="material-icons">menu</i>
 		</a>
@@ -28,72 +28,74 @@
 			<img src="images/user.png" alt="perfil">
 		</a>
 	</header>
-	<nav id="navigation" class="navigation">
-		<a href="#" class="navigation-items">
-			<img src="images/bulb.png" alt="">
-			<p>Notas</p>
-		</a>
-		<a href="#" class="navigation-items navigation-items-separator">
-			<img src="images/reminder.png" alt="">
-			<p>Recordatorios</p>
-		</a>
+	<div id="aside-content">
+		<nav id="navigation" class="navigation">
+			<a href="#" class="navigation-items">
+				<img src="images/bulb.png" alt="">
+				<p>Notas</p>
+			</a>
+			<a href="#" class="navigation-items navigation-items-separator">
+				<img src="images/reminder.png" alt="">
+				<p>Recordatorios</p>
+			</a>
 
-		<a href="#" class="navigation-items navigation-items-separator">
-			<img src="images/add.png" alt="">
-			<p>Crear etiqueta</p>
-		</a>
+			<a href="#" class="navigation-items navigation-items-separator">
+				<img src="images/add.png" alt="">
+				<p>Crear etiqueta</p>
+			</a>
 
-		<a href="#" class="navigation-items">
-			<img src="images/storage.png" alt="">
-			<p>Archivo</p>
-		</a>
-		<a href="#" class="navigation-items navigation-items-separator">
-			<img src="images/trash.png" alt="">
-			<p>Papelera</p>
-		</a>
+			<a href="#" class="navigation-items">
+				<img src="images/storage.png" alt="">
+				<p>Archivo</p>
+			</a>
+			<a href="#" class="navigation-items navigation-items-separator">
+				<img src="images/trash.png" alt="">
+				<p>Papelera</p>
+			</a>
 
-		<a href="#" class="navigation-items">
-			<img src="images/settings.png" alt="">
-			<p>Ajustes</p>
-		</a>
-		<a href="#" class="navigation-items">
-			<img src="" alt="">
-			<p>Enviar comentarios</p>
-		</a>
-		<a href="#" class="navigation-items">
-			<img src="" alt="">
-			<p>Ayuda</p>
-		</a>
-		<a href="#" class="navigation-items">
-			<img src="" alt="">
-			<p>Descarga de aplicaciones</p>
-		</a>
-		<a href="#" class="navigation-items">
-			<img src="" alt="">
-			<p>Combinaciones de teclas</p>
-		</a>
-	</nav>
-	<section id="content" class="content">
-		<input type="text" name="" class="searcher-content" placeholder="Tomar una nota...">
-		<div class="content-notes">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-		</div>
-		<div class="content-notes">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-		</div>
-		<div class="content-notes">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-		</div>
-		<div class="content-notes">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-		</div>
-		<div class="content-notes">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-		</div>
-		<div class="content-notes">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-		</div>
-	</section>
+			<a href="#" class="navigation-items">
+				<img src="images/settings.png" alt="">
+				<p>Ajustes</p>
+			</a>
+			<a href="#" class="navigation-items">
+				<img src="" alt="">
+				<p>Enviar comentarios</p>
+			</a>
+			<a href="#" class="navigation-items">
+				<img src="" alt="">
+				<p>Ayuda</p>
+			</a>
+			<a href="#" class="navigation-items">
+				<img src="" alt="">
+				<p>Descarga de aplicaciones</p>
+			</a>
+			<a href="#" class="navigation-items">
+				<img src="" alt="">
+				<p>Combinaciones de teclas</p>
+			</a>
+		</nav>
+		<section id="content" class="content">
+			<input type="text" name="" class="searcher-content" placeholder="Tomar una nota...">
+			<div class="content-notes">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			</div>
+			<div class="content-notes">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			</div>
+			<div class="content-notes">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			</div>
+			<div class="content-notes">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			</div>
+			<div class="content-notes">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			</div>
+			<div class="content-notes">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			</div>
+		</section>
+	</div>
 </body>
 
 </html>
