--- a/index.html
+++ b/index.html
@@ -12,20 +12,26 @@
 
 <body id="main-grid">
 	<header>
-		<a id="header-menu" class="header-menu" href="#">
+		<a id="header-menu" class="icon icon-circle" href="#">
 			<i class="material-icons">menu</i>
 		</a>
 		<h1 class="title">
 			<span>Google</span>Keep</h1>
 		<input type="text" name="searcher" class="searcher-header" placeholder="Busca lo que quieras">
-		<a href="#">
-			<img src="images/refresh.png" alt="actualizar">
+		<a class="icon" href="#">
+			<i class="material-icons">autorenew</i>
 		</a>
-		<a href="#">
-			<img src="images/list.png" alt="listar">
+		<a class="icon" href="#">
+			<i class="material-icons">view_agenda</i>
 		</a>
-		<a href="#">
-			<img src="images/user.png" alt="perfil">
+		<a class="icon" href="#">
+			<i class="material-icons">apps</i>
+		</a>
+		<a class="icon" href="#">
+			<i class="material-icons">notifications</i>
+		</a>
+		<a class="icon" href="#">
+			<i class="material-icons">public</i>
 		</a>
 	</header>
 	<div id="aside-content">
