fix: change semantic names in index.html (and css selectors) and disable scroll event when nav is selected in mobile

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<i class="material-icons">public</i>
 		</a>
 	</header>
-	<div id="aside-content">
+	<main id="aside-content">
 		<nav id="navigation" class="navigation">
 			<a href="#" class="navigation-items">
 				<img src="images/bulb.png" alt="">
@@ -101,7 +101,7 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 			</div>
 		</section>
-	</div>
+	</main>
 </body>
 
 </html>
