style: change main variable name

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<i class="material-icons">public</i>
 		</a>
 	</header>
-	<main id="aside-content">
+	<main id="aside-content-container">
 		<nav id="navigation" class="navigation">
 			<a href="#" class="navigation-items">
 				<img src="images/bulb.png" alt="">
