feat: add callback to the task 'add note'

--- a/index.html
+++ b/index.html
@@ -81,7 +81,12 @@
 			</a>
 		</nav>
 		<section id="content" class="content">
-			<input type="text" name="" class="searcher-content" placeholder="Tomar una nota...">
+			<div class="searcher-content">
+				<input id="searcher-content-input" type="text" placeholder="Tomar una nota...">
+				<a id="searcher-content-btnadd" class="icon" href="#">
+					<i class="material-icons">add</i>
+				</a>
+			</div>
 			<div class="content-notes">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 			</div>
