--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 		<section id="content" class="content">
 			<div class="searcher-content">
 				<input id="searcher-content-input" type="text" placeholder="Tomar una nota...">
-				<a id="searcher-content-btnadd" class="icon" href="#">
+				<button id="searcher-content-btnadd" class="icon" disabled>
 					<i class="material-icons">add</i>
-				</a>
+				</button>
 			</div>
 			<div class="content-notes">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
