--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<script src="js/utils.js"></script>
+	<script src="js/aside-behaviour.js"></script>
+	<script src="js/search-content-behaviour.js"></script>
 	<script src="js/main.js"></script>
 </head>
 
