fix: changed layout, notes in same grid, changed some divs for more semantic tags

--- a/index.html
+++ b/index.html
@@ -90,24 +90,26 @@
 					<i class="material-icons">add</i>
 				</button>
 			</div>
-			<div class="content-notes">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-			</div>
-			<div class="content-notes">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-			</div>
-			<div class="content-notes">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-			</div>
-			<div class="content-notes">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-			</div>
-			<div class="content-notes">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-			</div>
-			<div class="content-notes">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-			</div>
+			<section class="grid-notes">
+				<article class="content-notes">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+				</article>
+				<article class="content-notes">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+				</article>
+				<article class="content-notes">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+				</article>
+				<article class="content-notes">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+				</article>
+				<article class="content-notes">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+				</article>
+				<article class="content-notes">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+				</article>
+			</section>
 		</section>
 	</main>
 </body>
