fix: add more mediaqueries on header

--- a/index.html
+++ b/index.html
@@ -21,21 +21,25 @@
 		<h1 class="title">
 			<span>Google</span>Keep</h1>
 		<input type="text" name="searcher" class="searcher-header" placeholder="Busca lo que quieras">
-		<a class="icon" href="#">
-			<i class="material-icons">autorenew</i>
-		</a>
-		<a class="icon" href="#">
-			<i class="material-icons">view_agenda</i>
-		</a>
-		<a class="icon" href="#">
-			<i class="material-icons">apps</i>
-		</a>
-		<a class="icon" href="#">
-			<i class="material-icons">notifications</i>
-		</a>
-		<a class="icon" href="#">
-			<i class="material-icons">public</i>
-		</a>
+		<div class="header-optgroup-1">
+			<a class="icon" href="#">
+				<i class="material-icons">autorenew</i>
+			</a>
+			<a class="icon" href="#">
+				<i class="material-icons">view_agenda</i>
+			</a>
+		</div>
+		<div class="header-optgroup-2">
+			<a class="icon" href="#">
+				<i class="material-icons">apps</i>
+			</a>
+			<a class="icon" href="#">
+				<i class="material-icons">notifications</i>
+			</a>
+			<a class="icon" href="#">
+				<i class="material-icons">public</i>
+			</a>
+		</div>
 	</header>
 	<main id="aside-content-container">
 		<nav id="navigation" class="navigation">
