fix: fix add note in .js (wrong grid selector)

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					<i class="material-icons">add</i>
 				</button>
 			</div>
-			<section class="grid-notes">
+			<section id="grid-notes" class="grid-notes">
 				<article class="content-notes">
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 				</article>
