feat: dinamic navigation items

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<script src="js/utils.js"></script>
+	<script src="js/navigation.js"></script>
 	<script src="js/aside-behaviour.js"></script>
 	<script src="js/search-content-behaviour.js"></script>
 	<script src="js/main.js"></script>
@@ -43,49 +44,7 @@
 	</header>
 	<main id="aside-content-container">
 		<nav id="navigation" class="navigation">
-			<a href="#" class="navigation-items">
-				<img src="images/bulb.png" alt="">
-				<p>Notas</p>
-			</a>
-			<a href="#" class="navigation-items navigation-items-separator">
-				<img src="images/reminder.png" alt="">
-				<p>Recordatorios</p>
-			</a>
-
-			<a href="#" class="navigation-items navigation-items-separator">
-				<img src="images/add.png" alt="">
-				<p>Crear etiqueta</p>
-			</a>
-
-			<a href="#" class="navigation-items">
-				<img src="images/storage.png" alt="">
-				<p>Archivo</p>
-			</a>
-			<a href="#" class="navigation-items navigation-items-separator">
-				<img src="images/trash.png" alt="">
-				<p>Papelera</p>
-			</a>
-
-			<a href="#" class="navigation-items">
-				<img src="images/settings.png" alt="">
-				<p>Ajustes</p>
-			</a>
-			<a href="#" class="navigation-items">
-				<img src="" alt="">
-				<p>Enviar comentarios</p>
-			</a>
-			<a href="#" class="navigation-items">
-				<img src="" alt="">
-				<p>Ayuda</p>
-			</a>
-			<a href="#" class="navigation-items">
-				<img src="" alt="">
-				<p>Descarga de aplicaciones</p>
-			</a>
-			<a href="#" class="navigation-items">
-				<img src="" alt="">
-				<p>Combinaciones de teclas</p>
-			</a>
+			
 		</nav>
 		<section id="content" class="content">
 			<div class="searcher-content">
