refactor/fix: rename search-content-behaviour to add-note-behaviour / change style.css material-icons to be affected only in header and nav

--- a/index.html
+++ b/index.html
@@ -10,34 +10,34 @@
 	<script src="js/utils.js"></script>
 	<script src="js/navigation.js"></script>
 	<script src="js/aside-behaviour.js"></script>
-	<script src="js/search-content-behaviour.js"></script>
+	<script src="js/add-note-behaviour.js"></script>
 	<script src="js/main.js"></script>
 </head>
 
 <body id="main-grid">
 	<header>
-		<a id="header-menu" class="icon icon-circle" href="#">
+		<a id="header-menu" class="header-items icon icon-circle" href="#">
 			<i class="material-icons">menu</i>
 		</a>
 		<h1 class="title">
 			<span>Google</span>Keep</h1>
 		<input type="text" name="searcher" class="searcher-header" placeholder="Busca lo que quieras">
 		<div class="header-optgroup-1">
-			<a class="icon" href="#">
+			<a class="header-items icon" href="#">
 				<i class="material-icons">autorenew</i>
 			</a>
-			<a class="icon" href="#">
+			<a class="header-items icon" href="#">
 				<i class="material-icons">view_agenda</i>
 			</a>
 		</div>
 		<div class="header-optgroup-2">
-			<a class="icon" href="#">
+			<a class="header-items icon" href="#">
 				<i class="material-icons">apps</i>
 			</a>
-			<a class="icon" href="#">
+			<a class="header-items icon" href="#">
 				<i class="material-icons">notifications</i>
 			</a>
-			<a class="icon" href="#">
+			<a class="header-items icon" href="#">
 				<i class="material-icons">public</i>
 			</a>
 		</div>
