style: change class names of the input and children which add notes (searcher-content-blah ->add-note-blah)

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 			
 		</nav>
 		<section id="content" class="content">
-			<div class="searcher-content">
-				<input id="searcher-content-input" type="text" placeholder="Tomar una nota...">
-				<button id="searcher-content-btnadd" class="icon" disabled>
+			<div class="add-note">
+				<input id="add-note-input" type="text" placeholder="Tomar una nota...">
+				<button id="add-note-btnadd" class="icon" disabled>
 					<i class="material-icons">add</i>
 				</button>
 			</div>
