style: better .search-notes instead of .search-note in index.html and style.css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</a>
 		<h1 class="title">
 			<span>Google</span>Keep</h1>
-		<input type="text" name="searcher" id="search-note" class="search-note" placeholder="Busca lo que quieras">
+		<input type="text" name="searcher" id="search-notes" class="search-notes" placeholder="Busca lo que quieras">
 		<div class="header-optgroup-1">
 			<a class="header-items icon" href="#">
 				<i class="material-icons">autorenew</i>
