feat/fix: add callback on search note input / bahaviour -> behaviour

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<script src="js/navigation.js"></script>
 	<script src="js/aside-behaviour.js"></script>
 	<script src="js/add-note-behaviour.js"></script>
+	<script src="js/search-note-behaviour.js"></script>
 	<script src="js/main.js"></script>
 </head>
 
