--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<script src="js/utils.js"></script>
 	<script src="js/navigation.js"></script>
 	<script src="js/aside-behaviour.js"></script>
+	<script src="js/notes.js"></script>
 	<script src="js/add-note-behaviour.js"></script>
 	<script src="js/search-note-behaviour.js"></script>
 	<script src="js/main.js"></script>
@@ -55,24 +56,7 @@
 				</button>
 			</div>
 			<section id="grid-notes" class="grid-notes">
-				<article class="content-notes">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-				</article>
-				<article class="content-notes">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-				</article>
-				<article class="content-notes">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-				</article>
-				<article class="content-notes">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-				</article>
-				<article class="content-notes">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-				</article>
-				<article class="content-notes">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-				</article>
+
 			</section>
 		</section>
 	</main>
