feat: add delete note js behaviour

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<script src="js/notes.js"></script>
 	<script src="js/add-note-behaviour.js"></script>
 	<script src="js/search-note-behaviour.js"></script>
+	<script src="js/remove-note-behaviour.js"></script>
 	<script src="js/main.js"></script>
 </head>
 
