feat: delete multiple notes feature

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 				<button id="add-note-btnadd" class="icon" disabled>
 					<i class="material-icons">add</i>
 				</button>
+				<button id="add-note-btnremove" class="icon">
+					<i class="material-icons">delete</i>
+				</button>
 			</div>
 			<section id="grid-notes" class="grid-notes">
 
