refactor: css refactorization in multiple css files

--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Google keep</title>
-	<link rel="stylesheet" href="css/style.css">
+
+	<link rel="stylesheet" href="css/aside.css">
+	<link rel="stylesheet" href="css/beauty.css">
+	<link rel="stylesheet" href="css/header.css">
+	<link rel="stylesheet" href="css/icon.css">
+	<link rel="stylesheet" href="css/main-structure.css">
+	<link rel="stylesheet" href="css/note-input-add-remove.css">
+	<link rel="stylesheet" href="css/note.css">
+
 	<link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 	<script src="js/utils.js"></script>
 	<script src="js/navigation.js"></script>
 	<script src="js/aside-behaviour.js"></script>
