--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<script src="js/add-note-behaviour.js"></script>
 	<script src="js/search-note-behaviour.js"></script>
 	<script src="js/remove-note-behaviour.js"></script>
+	<script src="js/update-note-behaviour.js"></script>
 	<script src="js/main.js"></script>
 </head>
 
@@ -61,7 +62,7 @@
 				<h3>Modifica la nota</h3>
 			</header>
 			<div class="text-container">
-				<input id="update-node-text" type="text">
+				<input id="update-note-text" type="text">
 			</div>
 			<footer>
 				<button id="update-note-ok" class="btn-submit">Ok</button>
