fix: fix update note sync

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 	<script src="js/navigation.js"></script>
 	<script src="js/aside-behaviour.js"></script>
 	<script src="js/notes.js"></script>
+	<script src="js/note-utils.js"></script>
 	<script src="js/add-note-behaviour.js"></script>
+	<script src="js/local-storage-notes-behaviour.js"></script>
 	<script src="js/search-note-behaviour.js"></script>
 	<script src="js/remove-note-behaviour.js"></script>
 	<script src="js/update-note-behaviour.js"></script>
